--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <article class="home-view center">
-            <img src="img/profile.png" alt="Abdul Wasi">
+            <img src="profile.png" alt="Abdul Wasi">
             <h4>Hi, I'm Abdul Wasi' Al-Afif</h4>
             <h1>Building website with HTML, CSS, and Javascript</h1>
             <p>a <strong>Front End Developer and UI Designer</strong> from Lamongan.</p>
@@ -115,7 +115,7 @@
                     <h2>About</h2>
                     <b><p>Abdul Wasi' Al-Afif</p></b>
                     <figure>
-                        <img src="img/profile.png">
+                        <img src="profile.png">
                         <!-- <figcaption>Lambang</figcaption> -->
                     </figure>
                 </header>
