--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <article class="home-view center">
             <img src="profile.png" alt="Abdul Wasi">
-            <h4>Hi, I'm Abdul Wasi' Al-Afif</h4>
+            <h4>Hi, I'm Abdul Wasi'</h4>
             <h1>Building website with HTML, CSS, and Javascript</h1>
             <p>a <strong>Front End Developer and UI Designer</strong> from Lamongan.</p>
             <p>I'm specialize in UI Mobile & Website, Responsive Web Design, and Progressive Web Apps</p>
@@ -113,7 +113,7 @@
             <article class="profile card">
                 <header>
                     <h2>About</h2>
-                    <b><p>Abdul Wasi' Al-Afif</p></b>
+                    <b><p>Abdul Wasi'</p></b>
                     <figure>
                         <img src="profile.png">
                         <!-- <figcaption>Lambang</figcaption> -->
@@ -136,7 +136,7 @@
                         </tr>
                         <tr>
                             <th>Email</th>
-                            <td>abdwasidev@gmail.com</td>
+                            <td>abdulwasialafif@gmail.com</td>
                         </tr>
                     </table>
                 </section>
