--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
                 <article class="flex-column">
                     <section class="card-footer flex-row">
                         <button class="buttontabs purple" onclick="openTabs(event, 'HomePage')" id="default">
-                            <div class="japanese">にぎり</div>
+                            <div class="japanese">ホーム</div>
                             <div class="roman">Home</div>
                         </button>
                         <button class="buttontabs teal" onclick="openTabs(event, 'ExperiencePage')">
-                            <div class="japanese">にぎり</div>
+                            <div class="japanese">経験</div>
                             <div class="roman">Experience</div>
                         </button>
                         <button class="buttontabs pink" onclick="openTabs(event, 'EducationPage')">
-                            <div class="japanese">にぎり</div>
+                            <div class="japanese">教育</div>
                             <div class="roman">Education</div>
                         </button>
                         <button class="buttontabs yellow" onclick="openTabs(event, 'ProjectPage')">
-                            <div class="japanese">にぎり</div>
+                            <div class="japanese">プロジェクト</div>
                             <div class="roman">Projects</div>
                         </button>
                         <button class="buttontabs green" onclick="openTabs(event, 'CertificatePage')">
-                            <div class="japanese">にぎり</div>
+                            <div class="japanese">きょじょう</div>
                             <div class="roman">Certificate</div>
                         </button>
                         <button class="buttontabs red" onclick="openTabs(event, 'AboutMePage')">
-                            <div class="japanese">にぎり</div>
+                            <div class="japanese">私について</div>
                             <div class="roman">About Me</div>
                         </button>
                     </section>
